HTML and CSS addition

--- a/index.html
+++ b/index.html
@@ -1,12 +1,89 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+<!doctype html>
+<html lang="en-us">
+    <head>
+        <meta charset="utf-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>M. Bilal</title>
+		<link rel="icon" href="images/fav.ico">
+        <style type="text/css">
+            *{
+    box-sizing: border-box;
+}
+body{
+    background-color:aliceblue;
+    margin: 0;
+    border:none;
+    text-align: center;
+}
+.calculator-container{
+    display: inline-block;
+    width:270px;
+    padding:10px 5px;
+    background-color: rgb(182, 221, 223);
+    border-radius: 10px;
+}
+.calculator-container *{
+    background-color: rgb(182, 221, 223);
+    border-radius: 5px;
+    margin: 5px;
+}
+.calculator-container input{
+    width: 240px;
+    text-align: right;
+    box-shadow: inset;
+    box-shadow: -1px -2px 3px 2px #ffffff inset, 1px 2px 3px 2px #000000 inset;
+}
+.calculator-container input:active{
+    border:none;
+    outline:none;
+}
+.calculator-container>button{
+    width: 50px;
+    box-shadow: -1px -2px 3px 2px #ffffff, 1px 2px 3px 2px #000000;
+}
+
+.calculator-container>button:hover{
+    box-shadow: -1px -2px 3px 2px #ffffff inset, 1px 2px 3px 2px #000000 inset;
+}
+.calculator-container>button:active{
+    background-color: rgb(203, 235, 236);
+}
+.calculator-container input, .calculator-container>button{
+    height: 40px;
+    font-size: 1.5rem;
+    border:none;
+}
+        </style>
+    </head>
+    <body>
+        <header><h2>Calculator</h2></header>
+        <main>
+            <div class="calculator-container">
+                <form>
+                    <input type="text" id="calculation-area" name="calculation-area">
+                </form>
+                <button>1</button>
+                <button>2</button>
+                <button>3</button>
+                <button>AC</button>
+                <button>4</button>
+                <button>5</button>
+                <button>6</button>
+                <button>+</button>
+                <button>7</button>
+                <button>8</button>
+                <button>9</button>
+                <button>-</button>
+                <button>.</button>
+                <button>0</button>
+                <button>=</button>
+                <button>*</button>
+                <button>(</button>
+                <button>)</button>
+                <button>%</button>
+                <button>/</button>
+            </div>
+        </main>
+    </body>
 </html>
