--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<html lang="en-us">
+<html lang="en-us" dir="ltr">
     <head>
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>M. Bilal</title>
+        <title>Calculator project</title>
 		<link rel="icon" href="images/fav.ico">
         <link type="text/css" rel="stylesheet" href="style.css">
     </head>
@@ -12,30 +12,30 @@
         <header><h2>Calculator</h2></header>
         <main>
             <div class="calculator-container">
-                <form>
-                    <input type="text" id="calculation-area" name="calculation-area">
-                </form>
-                <button>1</button>
-                <button>2</button>
-                <button>3</button>
-                <button>AC</button>
-                <button>4</button>
-                <button>5</button>
-                <button>6</button>
-                <button>+</button>
-                <button>7</button>
-                <button>8</button>
-                <button>9</button>
-                <button>-</button>
-                <button>.</button>
-                <button>0</button>
-                <button>=</button>
-                <button>*</button>
-                <button>(</button>
-                <button>)</button>
-                <button>%</button>
-                <button>/</button>
+                <input type="text" id="result" disabled>
+                <input type="button" value="1" onclick="display('1')" />
+                <input type="button" value="2" onclick="display('2')" />
+                <input type="button" value="3" onclick="display('3')" />
+                <input type="button" value="AC" onclick="clearScreen()" id="btn" />
+                <input type="button" value="4" onclick="display('4')" />
+                <input type="button" value="5" onclick="display('5')" />
+                <input type="button" value="6" onclick="display('6')" />
+                <input type="button" value="+" onclick="display('+')" />
+                <input type="button" value="7" onclick="display('7')" />
+                <input type="button" value="8" onclick="display('8')" />
+                <input type="button" value="9" onclick="display('9')" />
+                <input type="button" value="-" onclick="display('-')" />
+                <input type="button" value="." onclick="display('.')" />
+                <input type="button" value="0" onclick="display('0')" />
+                <!-- calculate() function evaluates the mathematical expression -->
+                <input type="button" value="=" onclick="calculate()" id="btn" />
+                <input type="button" value="*" onclick="display('*')" />
+                <input type="button" value="(" onclick='display("&#40")'/>
+                <input type="button" value=")" onclick="display('&#41')" />
+                <input type="button" value="%" onclick="display('*.01')" />
+                <input type="button" value="/" onclick="display('/')" />
             </div>
         </main>
+        <script type="text/javascript" src="script.js"></script>
     </body>
 </html>
